--- a/style.css
+++ b/style.css
@@ -383,7 +383,49 @@ font-weight: 500;
   border-radius: 5px;
   font-weight: 500;
   }
-  /* ---------------------------- */
+/* ---------------------------- */
+/* SERVICES*/
+/* ---------------------------- */
+#services{
+  margin-top: 15px;
+  display: flex; 
+}
+#services h5{
+  margin: 20px 0;
+}
+.services-box{
+  width: 5%;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-right: 5px;
+  position: relative;
+  margin-right: 20px;
+}
+.fa-magnifying-glass , .fa-box-archive,.fa-paper-plane,.fa-shield-halved
+{
+  border: 2px solid #fff;
+  border-radius: 50%;
+  background-color: #D1E7FF;
+  padding: 15px;
+  position: absolute;
+  z-index: 2;
+  left: 190px;
+  bottom: 55px;
+}
+.services-box img{
+  width: 111%;
+  border-radius: 5px 5px 0 0;
+  position: relative;
+  background-color: black;
+  color: white;
+  z-index: 1;
+  margin-left: -13px;
+}
+.services-box p{
+  padding-top: 15px;
+}
+/* ---------------------------- */
 /* COUNTRY*/
 /* ---------------------------- */
 #country{
