--- a/style.css
+++ b/style.css
@@ -384,6 +384,41 @@ font-weight: 500;
   font-weight: 500;
   }
 /* ---------------------------- */
+/* SUPPLIERS*/
+/* ---------------------------- */
+#suppliers {
+  width: 100%;
+  padding: 50px 0;
+  overflow: hidden;
+}
+
+.suppliers-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+
+.gradient-overlay {
+  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #2C7CF1 0%, #00D1FF 100%);
+  opacity: 0.8; 
+  z-index: 2;
+}
+.index{
+  padding: 20px;
+  position: absolute;
+  z-index: 2;
+}
+/* ---------------------------- */
 /* SERVICES*/
 /* ---------------------------- */
 #services{
@@ -449,9 +484,7 @@ font-weight: 500;
   padding-top: 10px;
   padding-right: 10px;
 }
-/* .supplier-flag p,small{
-  padding-left: 50px;
-} */
+
 /* ---------------------------- */
 /* NEWSLETTER */
 /* ---------------------------- */
