--- a/style.css
+++ b/style.css
@@ -315,74 +315,62 @@ body {
 
 /* ---------------------------- */
 /* SECTION BLOCK-ITEMS-GROUP */
-/* ---------------------------- */
-
-.block-items-group{
-  border: 1px solid #ddd;
-  border-radius: 7px;
-  background-color: #FFF;
-  margin-top: 15px;
-  position: relative;
-  padding-right: 15px;
-}
-.block-items-group-text{
-position: absolute;
-top: 8px;
-left: 16px;
-font-size: 20px;
-}
-.source-btn{
-position: absolute;
-top: 80px;
-left: 16px;
-padding: 6px 12px;
-color: #000;
-background-color: #fff; 
-border: 2px;
-border-radius: 5px;
-font-weight: 500;
-}
-.block-item{
-  display: flex;
-  font-size: 14px;
-  position: relative;
-  border: 1px solid #ddd; 
-  padding: 16px 0px 0;
-}
-.block-item p{
-  color: #8b96a5;
-}
-.block-item img{
- width: 70px;
-}
-/* ---------------------------- */
 /* SECTION BLOCK-ITEMS-SUB-GROUP */
 /* ---------------------------- */
-
-.block-items-sub-group{
-  border: 1px solid #ddd;
-  border-radius: 7px;
-  background-color: #FFF;
-  margin-top: 15px;
-  position: relative;
+#block-items-group{
+  margin: 0 50px;
+  padding: 0 65px;
 }
-.block-items-sub-group-text{
+.block {
+  position: relative;
+  background: #f8f9fa;
+  overflow: hidden;
+}
+.block img {
+  width: 100%;
+}
+.block-text {
   position: absolute;
-  top: 8px;
-  left: 16px;
-  font-size: 20px;
-  }
-  .source-sub-btn{
-  position: absolute;
-  top: 110px;
-  left: 16px;
-  padding: 6px 12px;
-  color: #000;
-  background-color: #fff; 
-  border: 2px;
-  border-radius: 5px;
+  top: 5%;
+  left: 30%;
+  transform: translateX(-50%);
+  font-size: large;
   font-weight: 500;
-  }
+  color: black;
+}
+.source-btn {
+  position: absolute;
+  bottom: 45%;
+  left: 25%;
+  transform: translateX(-50%);
+  padding: 8px 15px;
+  background: white;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.block-items-group {
+  display: flex;
+  background: #fff;
+  border-radius: 7px;
+}
+.block-item {
+  display: flex;
+  justify-content: center;
+  background: #fff;
+  border: 1px solid #ddd;
+  padding: 12px 31px;
+  width: 213px;
+}
+.block-item p{
+  color: grey;
+}
+.block-item img {
+  width: 70px;
+  height: auto;
+}
+
 /* ---------------------------- */
 /* SUPPLIERS*/
 /* ---------------------------- */
