--- a/style.css
+++ b/style.css
@@ -363,6 +363,21 @@ body {
   padding: 12px 31px;
   width: 213px;
 }
+.block-sub-item{
+  display: flex;
+  justify-content: center;
+  background: #fff;
+  border: 1px solid #ddd;
+  padding: 16px 31px;
+  width: 213px;
+}
+.block-sub-item img{
+  width: 70px;
+  height: auto;
+}
+.block-sub-item p{
+  color: grey;
+}
 .block-item p{
   color: grey;
 }
