--- a/style.css
+++ b/style.css
@@ -152,6 +152,15 @@ body {
     padding-top: 15px;
     padding-bottom: 15px;
 }
+
+/*----------------------------*\
+	Section
+\*----------------------------*/
+
+.section {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 /* ---------------------------- */
 /* SECTION INQUIRY */
 /* ---------------------------- */
