--- a/products.css
+++ b/products.css
@@ -544,85 +544,76 @@
   padding: 8px 15px;
   gap:  10px;
 }
-
-  
-/*----------------------------*\
-    Store
-\*----------------------------*/
+/* ---------------  */
+/* product card  */
+/* ---------------  */
+.product{
+  padding: 10px 0;
+}
 .product-card {
-    background-color: #fff;
-    border: 1px solid #dee2e6;
-    border-radius: 5px;
-    padding: 15px;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: flex-start;
-    width: 100%;
+  background-color: #fff;
+  border: 2px solid #dee2e6;
+  border-radius: 8px;
+  padding: 15px;
+  margin-bottom: 20px;
+  padding: 0 10px 10px;
 }
 
 .product-image {
-    margin: 0 20px 0 0;
-    height: 180px;
+  text-align: center;
+  margin-bottom: 15px;
 }
 
-.product-details {
-    flex-grow: 1;
-}
-
-.product-title {
-    font-weight: bold;
-    margin-bottom: 5px;
+.product-image img {
+  max-width: 100%;
+  height: auto;
 }
 
 .price {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: black;
-    margin-bottom: 5px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
-.old-price {
-    font-size: 0.9em;
-    text-decoration: line-through;
-    color: #B9BABC;
-    margin-left: 5px;
+.original-price {
+  text-decoration: line-through;
+  color: #6c757d;
+  font-size: 1rem;
+  margin-left: 5px;
 }
 
-.ratings {
-    margin-bottom: 5px;
+.rating {
+  margin-bottom: 10px;
 }
 
-.ratings .star {
-    color: #ffc107;
+.star {
+  color: #ffc107;
 }
 
-.ratings i{
-    color: #cccccc;
-    font-size: 5px;
-    padding: 5px;
+.product-title {
+  font-size: 1rem;
+  margin-bottom: 5px;
+  color: #363434;
 }
 
-.order-rext {
-    color: #B9BABC;
-}
-.description {
-    color: #6c757d;
-    margin-bottom: 10px;
-}
-
-.view-details {
-    color: #007bff;
-    text-decoration: none;
+.product-description {
+  font-size: 0.9rem;
+  color: #363434;
 }
 
 .wishlist {
-    align-self: flex-start;
-    margin-left: auto;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 5px;
-    color: #007bff;
+  align-self: flex-start;
+  margin: 0 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 5px;
+  color: #007bff;
+  float: right;
 }
+
+
+
+
 /* -- bottom footer -- */
 #bottom-footer{
     background-color:#F7FAFC;
