--- a/productpage.css
+++ b/productpage.css
@@ -225,7 +225,7 @@
 }
 .product-thumbnails img {
   width: 13%;
-  height: 55px;
+  height: 50px;
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 0;
@@ -234,6 +234,7 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 15px;
+  background-color: #fff;
 }
 .supplier-info {
   border: 1px solid #ddd;
