--- a/productpage.css
+++ b/productpage.css
@@ -506,6 +506,11 @@ font-weight: bold;
   font-size: 0.9rem;
   color: #6c757d;
 }
+
+ /* ---------------------------- */
+  /* DISCOUNT PRODUCT  */
+  /* ---------------------------- */
+
 .discount-banner {
   background-color: #005ADE;
   color: white;
