--- a/checkout.css
+++ b/checkout.css
@@ -413,3 +413,131 @@
 .footer-payments a{
     text-decoration: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+/* ---------------------------- */
+/* Responsive for Tablets */
+/* ---------------------------- */
+@media (max-width: 992px) {
+  .header-logo, .header-ctn {
+    float: none;
+    text-align: center;
+    padding: 10px 0;
+  }
+  .actions {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .serv-box {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .saved-products-grid {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 30px;
+  }
+  .discount-banner {
+    flex-direction: column;
+    text-align: center;
+  }
+  .discount-left{
+    clip-path: none;
+    background-color: #005ADE;
+  }
+  .shop-now-button{
+    margin: 25px 10px;
+  }
+  .product-card img{
+    max-width: 120px;
+  }
+  .checkout{
+    max-width: 120px;
+  }
+  .payment{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer {
+    margin: 30px 25px;
+  }
+  .footer-left{
+    max-height: fit-content;
+    max-width: 150px;
+  }
+  .footer-links {
+    flex-wrap: wrap;
+  }
+  .footer-center{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    max-width: 290px;
+  }
+  .footer-right {
+    flex-direction:column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-payments {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+  }
+}
+
+/* ---------------------------- */
+/* Responsive for Mobile Phones */
+/* ---------------------------- */
+@media (max-width: 600px) {
+  .header-logo, .header-ctn {
+    padding: 5px 0;
+  }
+  .actions {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .cart-item {
+    flex-direction: column;
+    text-align: center; 
+  }
+  .cart-item img {
+    margin-bottom: 10px;
+  }
+  .item-detail{
+    display: flexbox;
+  } 
+  .serv-box {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .saved-products-grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .discount-banner {
+    flex-direction: column;
+    padding: 20px 10px;
+  }
+  .footer-center, .footer-right {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-payments {
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+}
