--- a/style.css
+++ b/style.css
@@ -636,3 +636,68 @@ body {
 .footer-payments a{
     text-decoration: none;
 }
+
+/* ---------------------------- */
+/* Responsive for Tablets */
+/* ---------------------------- */
+@media (max-width: 992px) {
+  .header-logo, .header-ctn {
+    float: none;
+    text-align: center;
+    padding: 10px 0;
+  }
+  .actions {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .footer {
+    margin: 30px 25px;
+  }
+  .footer-left{
+    max-height: fit-content;
+    max-width: 150px;
+  }
+  .footer-links {
+    flex-wrap: wrap;
+  }
+  .footer-center{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    max-width: 290px;
+  }
+  .footer-right {
+    flex-direction:column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-payments {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5px;
+  }
+}
+
+/* ---------------------------- */
+/* Responsive for Mobile Phones */
+/* ---------------------------- */
+@media (max-width: 600px) {
+  .header-logo, .header-ctn {
+    padding: 5px 0;
+  }
+  .actions {
+    flex-direction: column;
+    gap: 10px;
+  }
+   .footer-center, .footer-right {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-payments {
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+}
